# lan-scan-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  USAGE.md  example-run.sh
.github/workflows/: ci.yml
examples/: sample-output.json
src/: lib.rs  main.rs  netdetect.rs  ports.rs  scanner.rs  server.rs  types.rs
tests/: netdetect_tests.rs  ports_tests.rs
ui/: app.js  index.html  style.css
