[package]
name = "lan-scan-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
axum = "0.8"
tower = "0.5"
tokio-util = "0.7"
if-addrs = "0.14"
ipnet = "2.9"
tower-http = { version = "0.5", features = ["fs", "trace"] }
time = { version = "0.3", features = ["formatting"] }
